# Chat-Notepad-Core

./: .env.example  .gitignore  DAYS_3_4_FRONTEND_PROMPT.md  DAYS_3_4_README.md  IMPLEMENTATION_PLAN.md  README.md  SUPABASE_SETUP.md  agent.py  diff_utils.py  llm_service.py  main.py  pyproject.toml  pytest.ini  requirements.txt  test_advanced_features.py  test_auth.py  test_email_confirm.py  test_export_import_api.py  test_notes_api.py
app/: main.py
app/agents/: base_agent.py  summarizer_agent.py  text_editor_agent.py  transformer_agent.py
app/config/: config.py  supabase.py
app/core/: agent_manager.py  langgraph_workflow.py
app/middleware/: auth_middleware.py
app/models/: auth.py  requests.py
app/routers/: ai.py  auth.py  export_import.py  history.py  notes.py  text_operations.py  versions.py
app/services/: auth_service.py  export_service.py  history_service.py  import_service.py  llm_service.py  note_service.py  rate_limit_service.py  suggestion_service.py  translation_service.py  version_service.py
database/: schema.sql
tests/: conftest.py
tests/integration/: test_text_operations.py  test_transform_endpoint.py  test_transform_endpoint_simple.py
tests/unit/: test_langgraph_transformer.py  test_langgraph_workflow.py  test_transform_error_handling.py  test_transformer_agent.py
