[project]
name = "chatnotepad-fastmcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "diff-match-patch>=20241021",
    "fastapi>=0.116.1",
    "fastmcp>=2.9.2",
    "openai>=1.95.1",
    "uvicorn>=0.35.0",
]
