[project]
name = "chatnotepad-backend"
version = "2.0.0"
description = "ChatNotePad.Ai Backend - Multi-agent text processing API"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "diff-match-patch>=20241021",
    "fastapi>=0.116.1",
    "openai>=1.95.1",
    "uvicorn>=0.35.0",
    "python-dotenv>=1.0.0",
]
